force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping__c/fields/echosign_dev1__Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Child_Relationship_Name__c</fullName>
    <label>Child Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>