force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping__c/fields/echosign_dev1__Query_Filter__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Query_Filter__c</fullName>
    <label>Query Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>