force-app/main/default/objects/echosign_dev1__Form_Field_Child_Mapping__c/fields/echosign_dev1__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>